ARM64: dts: apalis-imx8qm-v1.1: spi: use gpio cs
It’s a limitation that one cannot use native SPI CS & DMA and have a
continuous CS for the whole transfer. The CS is deasserted after each
word sent.

One can either use DMA and GPIO CS or one can use PIO mode.
With this commit we change from using PIO mode to DMA mode and
change the CS used from the IP provided one to GPIO CS on the same pin.

This sync's the SPI configuration with the i.MX 8X based modules which
already uses DMA with GPIO CS.

Related-to: ELB-1278
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-apalis-v1.1.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-apalis-v1.1.dtsi
@@ -847,7 +847,7 @@
 				SC_P_SPI0_SCK_DMA_SPI0_SCK		0x0600004c
 				SC_P_SPI0_SDO_DMA_SPI0_SDO		0x0600004c
 				SC_P_SPI0_SDI_DMA_SPI0_SDI		0x0600004c
-				SC_P_SPI0_CS0_DMA_SPI0_CS0		0x0600004c
+				SC_P_SPI0_CS0_LSIO_GPIO3_IO05		0x0600004c
 			>;
 		};
 
@@ -857,7 +857,7 @@
 				SC_P_SPI2_SCK_DMA_SPI2_SCK		0x0600004c
 				SC_P_SPI2_SDO_DMA_SPI2_SDO		0x0600004c
 				SC_P_SPI2_SDI_DMA_SPI2_SDI		0x0600004c
-				SC_P_SPI2_CS0_DMA_SPI2_CS0		0x0600004c
+				SC_P_SPI2_CS0_LSIO_GPIO3_IO10		0x0600004c
 			>;
 		};
 
@@ -1210,7 +1210,7 @@
 	pinctrl-0 = <&pinctrl_lpspi0>;
 	#address-cells = <1>;
 	#size-cells = <0>;
-	dma-names = "no","no";
+	cs-gpios = <&gpio3 5 GPIO_ACTIVE_LOW>;
 
 	spidev0: spi@0 {
 		compatible = "toradex,evalspi";
@@ -1225,7 +1225,7 @@
 	pinctrl-0 = <&pinctrl_lpspi2>;
 	#address-cells = <1>;
 	#size-cells = <0>;
-	dma-names = "no","no";
+	cs-gpios = <&gpio3 10 GPIO_ACTIVE_LOW>;
 
 	spidev1: spi@0 {
 		compatible = "toradex,evalspi";
